# floatnote

./: BRIEF  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  mac_window_controller.rs  main.rs  window_controller.rs
src/routes/: +page.svelte
